changed bullet points in constr.

--- a/shane/contact/index.html
+++ b/shane/contact/index.html
@@ -131,11 +131,11 @@
   <label for="area">
     Choose your building area (sqft):<br>
   <select name="area" id="area">
-    <option value="0">< 860 ⏍</option>
-    <option value="1">860 - 1180 ⏍</option>
-    <option value="2">1600 - 2690 ⏍</option>
-    <option value="3">3230 ⏍</option>
-    <option value="4">> 3230 ⏍</option>
+    <option value="0">< 860</option>
+    <option value="1">860 - 1180</option>
+    <option value="2">1600 - 2690</option>
+    <option value="3">3230</option>
+    <option value="4">> 3230</option>
   </select>
   </label>
 <br>
