--- a/packages/index.html
+++ b/packages/index.html
@@ -36,7 +36,7 @@
 
 
 
-<link href="/css/custom.css?1721276492" rel="stylesheet">
+<link href="/css/custom.css?1721881364" rel="stylesheet">
 
 
 
@@ -328,7 +328,7 @@
         <div class="col-md-4 col-sm-6">
             <h4>About us</h4>
 
-            <p>We craft lightning-fast, professional websites at a fraction of the cost. Unlike bloated CMS platforms like Wordpress, our cutting-edge technology delivers websites that load instantly and rank higher in search results. We combine expert programming, stunning web design, and customized content creation to bring your vision to life.</p>
+            <p>We are professional and timely programmers. We design and create contents that are customized to your liking. Using an efficient and custom-tailored set of tools, we can build blazing fast websites that load instantly compared to regular websites like Wordpress at a fraction of the cost.</p>
 
             <hr class="hidden-md hidden-lg hidden-sm">
 
